ec2.yml
Resources:
    VPC:
      Type: AWS::EC2::VPC
      Properties:
        CidrBlock: 10.0.0.0/16
        EnableDnsSupport: 'true'
        EnableDnsHostnames: 'true'
        Tags:
        - Key: name
          Value: vpc-trabajo

    Subnet:
      Type: AWS::EC2::Subnet
      Properties:
        VpcId: !Ref VPC
        CidrBlock: 10.0.1.0/24


    GrupoSeguridadJenkins:
      Type: AWS::EC2::SecurityGroup
      Properties:
        GroupDescription: Grupo de Seguridad de Jenkins
        VpcId: !Ref VPC
        SecurityGroupIngress:
          - IpProtocol: tcp
            FromPort: 22
            ToPort: 22
            CidrIp: 0.0.0.0/0
          - IpProtocol: tcp
            FromPort: 80
            ToPort: 80
            CidrIp: 0.0.0.0/0

    instanciaJenkins:
     Type: AWS::EC2::Instance
     Properties: 
        ImageId: ami-00402f0bdf4996822
        InstanceType: t2.micro
        KeyName: prueba
        SubnetId: !Ref Subnet
        SecurityGroupIds:
          - !Ref GrupoSeguridadJenkins
        Tags:
          - Key: Name
            Value: instanciaJenkins

        UserData:
          Fn::Base64: !Sub |
            #!/bin/bash
            apt-get update -y
            apt-get install apache2 -y
            systemctl start apache2
            systemctl enable apache2

  #  instanciaApache:
  #    Type: 'AWS::EC2::Instance'
  #    Properties: 
  #       ImageId: ami-00402f0bdf4996822
  #       InstanceType: t2.micro
  #       KeyName: prueba
  #       SecurityGroupIds:
  #         - sg-043bcdf699413a158
  #       Tags:
  #         - Key: Name
  #           Value: instanciaCursoGTN

  #       UserData:
  #         Fn::Base64: !Sub |
  #           #!/bin/bash
  #           apt-get update -y
  #           apt-get install apache2 -y
  #           systemctl start apache2
  #           systemctl enable apache2
